@@ -1,4 +1,5 @@
-
-      
+```
+- Lệnh chạy: java --module-path "C:\javafx-sdk-25.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.web,javafx.swing,javafx.media,javafx.graphics,jdk.jsobject,jfx.incubator.input,jfx.incubator.richtext --enable-native-access=ALL-UNNAMED -jar DICTIONARY.jar
+```   
 
 
